Fix [Table navigation] alignment

--- a/src/components/ui/basics/Icon/icon.module.css
+++ b/src/components/ui/basics/Icon/icon.module.css
@@ -3,3 +3,6 @@
   height: 100%;
   cursor: pointer;
 }
+.wrapper {
+  line-height: 0;
+}
